# ADQC-CliffordTableaus

./: .gitignore  CMakeLists.txt  Makefile  README.md  clifford_tableau  compile_docs.sh  generate_random_circuits  main.cpp  measurement.json  test_clifford_tableaus
Documentation/: CSection1_introduction.tex  CliffordTableausDocumentation.aux  CliffordTableausDocumentation.bcf  CliffordTableausDocumentation.blg  CliffordTableausDocumentation.run.xml  CliffordTableausDocumentation.tex  adqcdocs.cls  bibliography.bib  compilation_log.txt
Presentation/: CliffordTableausPresentation.blg  CliffordTableausPresentation.tex  bibliography.bib  compilation_log.txt  frameset10_GottesmanKnillTheorem.tex  frameset11_StabilizerCircuit.tex  frameset12_CliffordTableau.tex  frameset15_MeasurementAlgorithm.tex  frameset16_Advantages.tex  frameset1_PauliMatrices.tex  frameset2_GroupTheory.tex  frameset3_PauliGroup.tex  frameset4_GroupGenerators.tex  frameset5_StabilizerGroups.tex  frameset6_StabilizerConditions.tex  frameset7_CheckMatrix.tex  frameset8_UnitaryOperations.tex  frameset9_Measurement.tex
Project/: sandbox.py
qc-simulation/: SimulatorTemplate.py  SimulatorVisitor.py  compare_probabilities.py  runSimulator.py  testCircuits.py  test_Exercise5.py  test_Exercise7and8.py  test_Simulator.py
qc-simulation/testCircuits/: bernstein_16.qasm
qc-simulation/unitTestCircuits/: testCircuit1.qasm  testCircuit2.qasm  testCircuit3.qasm  testCircuit4.qasm  testCircuit5.qasm  testCircuit6.qasm  testCircuit7.qasm  testCircuit8.qasm  testCircuit9.qasm
qc-simulation/zMainCircuits/: bernstein_16.qasm  random_circuit_1.qasm  random_circuit_2.qasm  random_circuit_3.qasm  test_circuit_1.qasm  test_circuit_10.qasm  test_circuit_11.qasm  test_circuit_2.qasm  test_circuit_3.qasm  test_circuit_4.qasm  test_circuit_5.qasm  test_circuit_6.qasm  test_circuit_7.qasm  test_circuit_8.qasm  test_circuit_9.qasm
src/: combine_files.py  generate.py  output.txt  quantum_circuit_reader.cpp  quarray.cpp  quarray.h  quarray.py  random_stabilizer_circuit.cpp  random_stabilizer_circuit.h  stabilizer_circuit.cpp  stabilizer_circuit.h  stabilizer_tableau.cpp  stabilizer_tableau.h  template.cpp  template.h
src/improved_simulation_of_stabilizer_circuits/: clifford_tableau.cpp  clifford_tableau.h  improved_stabilizer_tableau.cpp  improved_stabilizer_tableau.h  qutils.cpp  qutils.h  subroutines.cpp  subroutines.h  tableau.cpp  tableau.h
src/stabilizer_circuits/: bernstein_16.qasm  custom_circuit_1.qasm  custom_circuit_2.qasm  random_circuit_1.qasm  random_circuit_2.qasm  random_circuit_3.qasm  random_circuit_4.qasm  random_circuit_5.qasm  random_circuit_6.qasm  random_circuit_7.qasm  random_circuit_8.qasm  random_circuit_9.qasm  test_circuit_7.qasm  test_circuit_8.qasm
tests/: generate_random_circuits.cpp  test_improved_stabilizer_tableau.cpp  test_quarray.cpp  test_stabilizer_circuit.cpp
